<resources>
    <string name="app_name">InstagramAppStudy</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="or">OU</string>
    <string name="enter_with_facebook">Entrar com o Facebook</string>
    <string name="does_not_have_account">Não tem uma conta? <b><font color="#000000">Cadastre-se</font></b> </string>
</resources>