<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".login.presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/login_divider_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/loginImageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="48dp"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                android:src="@drawable/instagram_logo_black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginEditTextEmail"
                style="@style/InstaFormEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginEditTextSenha"
                style="@style/InstaFormEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButtonEnter"
                style="@style/InstaFormButton"
                android:text="@string/enter" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    style="@style/FormContainer"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimaryDark" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/InstaTextViewBase"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:text="@string/or"
                    android:textStyle="bold" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButtonEnterFacebook"
                style="@style/InstaFormButton.Link"
                android:layout_gravity="center"
                android:drawableStart="@drawable/facebook_logo"
                android:drawablePadding="8dp"
                android:text="@string/enter_with_facebook"
                android:textAllCaps="false" />
        </LinearLayout>

        <View
            android:id="@+id/login_divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/loginTextViewRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginTextViewRegister"
            style="@style/InstaTextViewBase"
            android:layout_gravity="center"
            android:padding="24dp"
            android:text="@string/does_not_have_account"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>